fix write review button covered by review summary

--- a/src/media/css/detail/reviews.styl
+++ b/src/media/css/detail/reviews.styl
@@ -50,7 +50,7 @@
         right: 110px;
     }
     [data-page-type~="detail"] .reviews-summary-large {
-        padding: 75px 0;
+        padding-top: 75px;
     }
     [data-page-type~="detail"] .reviews-wrapper {
         // Offset the margin-bottom from reviews.
